--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
+    "date-fns-jalali": "^2.30.0-0",
     "date-fns-tz": "^2.0.0",
     "lucide-react": "^0.294.0",
     "next": "14.0.4",
